refactor(backend): use Stream.toList() in Services
- FormulaireService
- FormulaireMedecinService
- UtilisateurService
- CsvExportService